force-app/main/default/objects/RSM_RankCost__c/RSM_RankCost__c.object-meta.xml
<CustomObject>
    <label>Coût Grade</label>
    <nameField>
        <displayFormat>Coût {000000}</displayFormat>
        <label>Coût Grade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coûts Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>