force-app/main/default/objects/RSM_RankCost__c/fields/RSM_Cost__c.field-meta.xml
<CustomField>
    <fullName>RSM_Cost__c</fullName>
    <label>Coût</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>