force-app/main/default/objects/RSM_RankCost__c/fields/RSM_Product__c.field-meta.xml
<CustomField>
    <fullName>RSM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coûts Grades</relationshipLabel>
    <relationshipName>CoutsGrades</relationshipName>
    <type>Lookup</type>
</CustomField>