force-app/main/default/objects/RSM_RankCost__c/fields/RSM_Rank__c.field-meta.xml
<CustomField>
    <fullName>RSM_Rank__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RSM_Ranks</valueSetName>
    </valueSet>
</CustomField>